--- a/csharp/mybrainhurts/mybrainhurts.csproj
+++ b/csharp/mybrainhurts/mybrainhurts.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CountTripletsWithSumSmallerThanAGivenValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseAnArray.cs" />
     <Compile Include="ReverseAnArrayWithoutAffectingSpecialCharacters.cs" />
