--- a/csharp/mybrainhurts/mybrainhurts.csproj
+++ b/csharp/mybrainhurts/mybrainhurts.csproj
@@ -44,11 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CountTripletsWithSumSmallerThanAGivenValue.cs" />
+    <Compile Include="Algorithms\CountTripletsWithSumSmallerThanAGivenValue.cs" />
+    <Compile Include="Katas\KarateChop\August2016\BinarySearch.cs" />
+    <Compile Include="Katas\KarateChop\August2016\AbstractBinarySearchTester.cs" />
+    <Compile Include="Katas\KarateChop\August2016\BinarySearchTester.cs" />
+    <Compile Include="Katas\KarateChop\August2016\IBinarySearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReverseAnArray.cs" />
-    <Compile Include="ReverseAnArrayWithoutAffectingSpecialCharacters.cs" />
-    <Compile Include="SortIntegerArrayMovingZerosToTheEnd.cs" />
+    <Compile Include="Algorithms\ReverseAnArray.cs" />
+    <Compile Include="Algorithms\ReverseAnArrayWithoutAffectingSpecialCharacters.cs" />
+    <Compile Include="Algorithms\SortIntegerArrayMovingZerosToTheEnd.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
